--- a/mylogin/.classpath
+++ b/mylogin/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="img"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/ext/mysql-connector.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
